# mudc

./: Makefile  Makefile.in  base.c  config.c  config.h  configure  configure.ac  entry_handler.c  globals.c  gui.c  macros.c  macros.h  main.c  menu.c  mudc.h  p_codes.c  settings.c  tab_complete.c  tab_complete.h  telnet.c  telnet.h  todo.org  worlds.c
src/: Makefile.am  Makefile.in  config.h  macros.c  macros.h  main.c  tab_complete.c  test.c
